# sudoku-solver

./: .gitignore  Readme.md  \  check.py  check2.py  check3.py  cnn.py  main.py  model.h5  model.json  opencv_part.py  predict.py  prediction.py  temo  videocam.py
CNN.model/: saved_model.pb
CNN.model/variables/: variables.data-00000-of-00001  variables.index
dataset/: augmentator.py  dataset.py  image_generator.py  knn.py  num_generator.py  training.py  y.pickle
models/: .gitignore  readme.md
sudoku_solver/: Cargo.toml
sudoku_solver/src/: lib.rs
