[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["Prakhar <b118038@iiit-bh.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku_solver"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
[dependencies.sudoku]
version = "0.7.0"
